--- a/squelettes/css/perso.css
+++ b/squelettes/css/perso.css
@@ -16,6 +16,10 @@ body {
 	font-style: normal;
 }
 
+/* on reset le focus de SPIP */
+a:focus, a:hover, a:active {
+	background-color: transparent;
+}
 
 /* Découpe de l'intégrateur*/
 /* CSS Document */
@@ -778,6 +782,7 @@ ______________________________________*/
 	width: 578px;
 	margin:0;
 	padding:0;
+	min-height: 100%;
 }
 .content a, div.navigation a {
 	text-decoration: none;
