--- a/squelettes/css/perso.css
+++ b/squelettes/css/perso.css
@@ -26,7 +26,7 @@ a {
 }
 
 a:hover {
-	color: #ff0189;
+	color: #d0006f;
 }
 
 /* Découpe de l'intégrateur*/
@@ -38,8 +38,9 @@ body {
 	padding:0;
 	font: 1em/1em "Droid Sans", Georgia, Cambria, Times New Roman, Times, serif;
 	font-family:"Droid Sans";
-	font-size:1em;
-	color:#767471;
+	font-size:1.06em;
+/*	color:#767471;*/
+  color: #5d5c59;
 }
 .background_body{
 	width:100%;
@@ -97,7 +98,7 @@ ______________________________________*/
 	top:-40px;
 	left:780px;
 	z-index:10;
-	margin-top:100px;
+	margin-top:90px;
 	margin-right:20px;
 	background-image:url(images/label.png);
 	background-repeat:no-repeat;
@@ -109,9 +110,9 @@ ______________________________________*/
 	width:126px;
 	height:158px;
 	float:left;
-	background-image:url(images/logo_vie_fem.jpg);
+	/*background-image:url(images/logo_vie_fem.jpg);
 	background-repeat:no-repeat;
-	background-position:top;
+	background-position:top;*/
 	margin:0;
 
 }
@@ -765,7 +766,7 @@ ______________________________________*/
 
 
 .col_princip_article p{
-	font-size:0.75em;
+	font-size:0.80em;
 	line-height:1.4em;
 	padding:0;
 	margin:0 0 20px 0;
@@ -775,7 +776,7 @@ ______________________________________*/
 
 }
 .col_princip_article .chapo p{
-	font-size:0.9em;
+	font-size:0.8em;
 	line-height:1.4em;
 	padding:0;
 	margin:0 0 20px 0;
@@ -1182,6 +1183,7 @@ table.ui-datepicker-calendar td {
 .nav ul li ul.sous-menu li {
 	float: none;
 	width: 100%;	
+  text-align: left;
 }
 
 .nav ul li ul.sous-menu li a {
